--- a/HandsOn/Group03/analysis.html
+++ b/HandsOn/Group03/analysis.html
@@ -88,36 +88,10 @@
                         </td>
                     </tr>
                     <tr class="data-row">
-                        <td class="cell">Nombre de la vía</td>
+                        <td class="cell">Dirección</td>
                         <td class="cell">String</td>
                         <td class="cell">
                             No es único <br>
-                            Número de opciones: 1867
-                        </td>
-                    </tr>
-                    <tr class="data-row">
-                        <td class="cell">Tipo de la vía</td>
-                        <td class="cell">String</td>
-                        <td class="cell">
-                            No es único <br>
-                            Número de opciones: 21
-                        </td>
-                    </tr>
-                    <tr class="data-row">
-                        <td class="cell">Partícula de la vía</td>
-                        <td class="cell">String</td>
-                        <td class="cell">
-                            No es único <br>
-                            Número de opciones: 5
-                        </td>
-                    </tr>
-                    <tr class="data-row">
-                        <td class="cell">Nº de la vía</td>
-                        <td class="cell">String</td>
-                        <td class="cell">
-                            No es único <br>
-                            Número de opciones: 562 <br>
-                            Formato: Número + [Letra]
                         </td>
                     </tr>
                     <tr class="data-row">
@@ -188,36 +162,10 @@
                         </td>
                     </tr>
                     <tr class="data-row">
-                        <td class="cell">Nombre de la vía</td>
+                        <td class="cell">Dirección</td>
                         <td class="cell">String</td>
                         <td class="cell">
-                            No es único <br>
-                            Número de opciones: 3501
-                        </td>
-                    </tr>
-                    <tr class="data-row">
-                        <td class="cell">Tipo de la vía</td>
-                        <td class="cell">String</td>
-                        <td class="cell">
-                            No es único <br>
-                            Número de opciones: 23
-                        </td>
-                    </tr>
-                    <tr class="data-row">
-                        <td class="cell">Partícula de la vía</td>
-                        <td class="cell">String</td>
-                        <td class="cell">
-                            No es único <br>
-                            Número de opciones: 7
-                        </td>
-                    </tr>
-                    <tr class="data-row">
-                        <td class="cell">Nº de la vía</td>
-                        <td class="cell">String</td>
-                        <td class="cell">
-                            No es único <br>
-                            Número de opciones: 616 <br>
-                            Formato: Número + [Letra]
+                            No es único
                         </td>
                     </tr>
 					<tr class="data-row">
@@ -288,38 +236,13 @@
                         </td>
                     </tr>
                     <tr class="data-row">
-                        <td class="cell">Nombre de la vía</td>
+                        <td class="cell">Dirección</td>
                         <td class="cell">String</td>
                         <td class="cell">
                             No es único <br>
-                            Número de opciones: 1370
                         </td>
                     </tr>
-                    <tr class="data-row">
-                        <td class="cell">Tipo de la vía</td>
-                        <td class="cell">String</td>
-                        <td class="cell">
-                            No es único <br>
-                            Número de opciones: 17
-                        </td>
-                    </tr>
-                    <tr class="data-row">
-                        <td class="cell">Partícula de la vía</td>
-                        <td class="cell">String</td>
-                        <td class="cell">
-                            No es único <br>
-                            Número de opciones: 5
-                        </td>
-                    </tr>
-                    <tr class="data-row">
-                        <td class="cell">Nº de la vía</td>
-                        <td class="cell">String</td>
-                        <td class="cell">
-                            No es único <br>
-                            Número de opciones: 345 <br>
-                            Formato: Número + [Letra]
-                        </td>
-                    </tr>
+                   
                 </table>
             </section>
         </section>
@@ -356,44 +279,17 @@
                         </td>
                     </tr>
                     <tr class="data-row">
-                        <td class="cell">Barrio</td>
+                        <td class="cell">Tipo de punto de carga</td>
                         <td class="cell">String</td>
                         <td class="cell">
                             No es único <br>
-                            Número de opciones: 48
                         </td>
                     </tr>
                     <tr class="data-row">
-                        <td class="cell">Nombre de la vía</td>
+                        <td class="cell">Dirección</td>
                         <td class="cell">String</td>
                         <td class="cell">
                             No es único <br>
-                            Número de opciones: 1370
-                        </td>
-                    </tr>
-                    <tr class="data-row">
-                        <td class="cell">Tipo de la vía</td>
-                        <td class="cell">String</td>
-                        <td class="cell">
-                            No es único <br>
-                            Número de opciones: 17
-                        </td>
-                    </tr>
-                    <tr class="data-row">
-                        <td class="cell">Partícula de la vía</td>
-                        <td class="cell">String</td>
-                        <td class="cell">
-                            No es único <br>
-                            Número de opciones: 5
-                        </td>
-                    </tr>
-                    <tr class="data-row">
-                        <td class="cell">Nº de la vía</td>
-                        <td class="cell">String</td>
-                        <td class="cell">
-                            No es único <br>
-                            Número de opciones: 345 <br>
-                            Formato: Número + [Letra]
                         </td>
                     </tr>
                     <tr class="data-row">
