--- a/HandsOn/Group21/Requirements/applicationRequirements.html
+++ b/HandsOn/Group21/Requirements/applicationRequirements.html
@@ -7,9 +7,7 @@
 	<body>
 		<h1>Application requirements</h1>
 		<ul>
-			<li>Disponibilidad de bicicletas por fechas</li>
-			<li>Uso de subscripciones anuales y ocasionales</li>
-			<li>Horas de servicio respecto al uso del mismo</li>
+			<li>Disponibilidad de aparcamientos cercanos a los eventos (por distritos).</li>
 		</ul>
 	</body>
 </html>
